--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,14 @@
 	<link rel='stylesheet' href='/build/bundle.css'>
 	<script src="https://cdn.tailwindcss.com"></script>
 	<script defer src='/build/bundle.js'></script>
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-DWC628MYXC"></script>
+	<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag(){dataLayer.push(arguments);}
+		gtag('js', new Date());
+
+		gtag('config', 'G-DWC628MYXC');
+	</script>
 </head>
 
 <body style="height:100%;">
